# TradingAlerts

./: .gitignore  README.md  pyproject.toml
app/: bot.py  coin_handlers.py  db.py  main.py  screener.json  trading.py
app/templates/: long_short_signal.jinja2  oi_signal.jinja2  pattern_signal.jinja2  pattern_signal_db.jinja2  price_signal.jinja2
