[project]
name = "tradingalerts"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.21.0",
    "aiohttp>=3.12.14",
    "bestconfig>=1.3.6",
    "bybit-api>=0.0.74",
    "ccxt>=4.4.95",
    "cryptography>=45.0.5",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pandas-ta>=0.3.14b0",
    "parsel>=1.10.0",
    "plotly>=6.2.0",
    "pybit>=5.11.0",
    "pycoingecko>=3.2.0",
    "pyspark>=4.0.0",
    "pytradingview>=0.3.0",
    "rich>=14.1.0",
    "scheduler",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "tradingview-api>=1.0.1",
    "tradingview-screener>=3.0.0",
]
